@@ -110,12 +110,14 @@
                             </sourceFileExcludes>
                             <additionalJOptions>
                                 <additionalJOption>-Xdoclint:none</additionalJOption>
+                                <!--Non MR-JAR version of xjc/src/main/java/com/sun/tools/xjc/CatalogUtil.java uses
+                                com.sun.org.apache.xml.internal.resolver (see resolver dependency)-->
+                                <additionalJOption>--module-path</additionalJOption>
+                                <additionalJOption>${module.path}</additionalJOption>
                                 <additionalJOption>--add-modules</additionalJOption>
-                                <additionalJOption>jakarta.activation</additionalJOption>
-                                <additionalJOption>--add-exports</additionalJOption>
-                                <additionalJOption>java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED</additionalJOption>
-                                <additionalJOption>--add-exports</additionalJOption>
-                                <additionalJOption>java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED</additionalJOption>
+                                <additionalJOption>resolver</additionalJOption>
+                                <additionalJOption>--add-reads</additionalJOption>
+                                <additionalJOption>com.sun.tools.xjc=resolver</additionalJOption>
                             </additionalJOptions>
                         </configuration>
                     </execution>
@@ -287,6 +289,24 @@
                                     <artifactId>istack-commons-tools</artifactId>
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${generated.classes.dir}</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>prepare-module-path</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${module.path}</outputDirectory>
+                            <silent>false</silent>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>com.sun.org.apache.xml.internal</groupId>
+                                    <artifactId>resolver</artifactId>
+                                    <overWrite>false</overWrite>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
